5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1616_2942.log
== TEST (2019-04-01 15:07:13) 
-- CODE:
d = input("domuts:")
o = 2 * d


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M = 2*(math.pi**2)(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:35) 
-- CODE:
d = input("domuts:")
o = (2 /12) * d
l = (150 / 12) * d
f = (120 / 12) * d
print(o)
print(l)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    o = (2 /12) * d
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:51) 
-- CODE:
d = input("domuts:")
o = (2 / 12) * d
l = (150 / 12) * d
f = (120 / 12) * d
print(o)
print(l)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    o = (2 / 12) * d
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:20) 
-- CODE:
d = input("domuts:")
o = (2 / 12) * d
l = (150 / 12) * d
f = (120 / 12) * d
print(o)
print(l)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    o = (2 / 12) * d
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:48) 
-- CODE:
d = input("domuts:")
o = float(2 / 12) * d
l = float(150 / 12) * d
f = float(120 / 12) * d
print(o)
print(l)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    o = float(2 / 12) * d
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:17:29) 
-- CODE:
d = input("domuts:")
o = float((2 / 12) * d)
l = float((150 / 12) * d)
f = float((120 / 12) * d)
print(o)
print(l)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    o = float((2 / 12) * d)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:36) 
-- CODE:
d = input("domuts:")
o = float(2 / d)
l = float(150 / d)
f = float((120 / d)
print(o)
print(l)
print(f)
-- ERROR:
File "XXXX", line 5
    print(o)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:42) 
-- CODE:
d = input("domuts:")
o = float(2 / d)
l = float(150 / d)
f = float(120 / d)
print(o)
print(l)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    o = float(2 / d)
TypeError: unsupported operand type(s) for /: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:22:52) 
-- CODE:
d = int(input("domuts:"))
o = float((2 / 12) * d)
l = float((150 / 12) * d)
f = float((120 / 12) * d)
print(o)
print(l)
print(f)
-- OUTPUT:
4.0
300.0
240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:23:01) 
-- CODE:
d = int(input("domuts:"))
o = float((2 / 12) * d)
l = float((150 / 12) * d)
f = float((120 / 12) * d)
print(o)
print(l)
print(f)
-- EXECUTION TIME:
0.205632
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
4.0
300.0
240.0
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
1.0
75.0
60.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
